--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: php
 
 before_script:
-    - composer install --dev
+    - composer self-update
     - composer update
+    - composer install --dev
 php:
   - 5.6
