--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "vlucas/phpdotenv": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "fzaninotto/faker": "~1.0"
+        "phpunit/phpunit": "^5.0",
+        "fzaninotto/faker": "~1.0",
+        "phpunit/phpunit-mock-objects": "^3.0",
+        "phpunit/php-code-coverage": "^3.0"
     },
     "autoload": {
         "psr-4": {
