--- a/circle.yml
+++ b/circle.yml
@@ -4,5 +4,5 @@ machine:
 
 test:
   override:
-    - vendor/bin/phpunit --bootstrap tests/bootstrap.php tests
+    - vendor/bin/phpunit --bootstrap tests/bootstrap.php tests/*
 
