--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
-        "vlucas/phpdotenv": "~1.0"
+        "vlucas/phpdotenv": "~1.0",
+        "ext-sqlite3": "0.7-dev",
+        "ext-pdo_sqlite": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
