--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: php
 
 before_script:
     - composer self-update
+    - composer --version
     - composer update
     - composer install --dev
 php:
   - 5.6
+
+script:
+    phpunit --configuration phpunit.xml --bootstrap tests/bootstrap.php tests/*
