--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ before_script:
     - composer install --dev
 php:
   - 5.6
+  - 7.0
+  - hhvm
+
+allow_failures:
+  - php: 7.0
+  - php: hhvm
 
 script:
     phpunit --configuration phpunit.xml --bootstrap tests/bootstrap.php tests/*
