--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
         "vlucas/phpdotenv": "~1.0",
-        "ext-sqlite3": "0.7-dev",
-        "ext-pdo_sqlite": "^1.0"
+        "ext-sqlite3": "*",
+        "ext-pdo_sqlite": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
