--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomKey!!!
+APP_TIMEZONE=Asia/Tokyo
 
-APP_LOCALE=en
+APP_LOCALE=jp
 APP_FALLBACK_LOCALE=en
 
 DB_CONNECTION=sqlite
