--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ allow_failures:
   - php: hhvm
 
 script:
-    phpunit --configuration phpunit.xml --bootstrap tests/bootstrap.php tests/*
+    phpunit -v --configuration phpunit.xml --bootstrap tests/bootstrap.php tests/*
