--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/lumen-framework": "5.1.*",
+        "laravel/lumen-framework": "5.2.*",
         "vlucas/phpdotenv": "~1.0",
         "ext-sqlite3": "*",
-        "ext-pdo_sqlite": "*"
+        "ext-pdo_sqlite": "*",
+        "ext-redis": "2.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0",
