--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 before_script:
+    - pecl install redis
     - composer self-update
     - composer --version
     - composer update
