--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,10 @@ machine:
   php:
     version: 5.6.14
 
+dependencies:
+  pre:
+    - pecl install redis
+
 test:
   override:
     - vendor/bin/phpunit --bootstrap tests/bootstrap.php tests/*
