--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: php
 
-before_script:
-    - pecl install redis
-    - composer self-update
-    - composer --version
-    - composer update
-    - composer install --dev
-php:
-  - 5.6
-  - 7.0
-  - hhvm
+
+matrix:
+  include:
+  - php: 5.6
+    before_script: pecl install redis
+  - php: 7.0
+  - php: hhvm
+  global:
+  - composer self-update
+  - composer --version
+  - composer update
+  - composer install --dev
 
 allow_failures:
   - php: 7.0
